[package]
name = "test-app"
version = "0.1.0"
authors = ["cyj <m11223041@gemail.yuntech.edu.tw>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.3"
reqwest = "0.11.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"

[build-dependencies]
slint-build = "1.3"
